exports[`App tests GalleryView 1`] = `
<tr>
  <td>
    <h1>
      dachsund puppy
    </h1>
    <p>
      Aren\'t puppies the best?
    </p>
  </td>
  <td>
    <img
      alt="dachsund puppy"
      src="http://www.easypetmd.com/sites/default/files/Miniature%20Dachshund%20Smooth%20haired%20(1).jpg" />
  </td>
</tr>
`;

exports[`App tests ListView 1`] = `
<div>
  <ul>
    <li>
      dachsund puppy
    </li>
    <li>
      Aren\'t puppies the best?
    </li>
    <li>
      http://www.easypetmd.com/sites/default/files/Miniature%20Dachshund%20Smooth%20haired%20(1).jpg
    </li>
  </ul>
</div>
`;

exports[`App tests ThumbnailView 1`] = `
<div>
  <h1>
    dachsund puppy
  </h1>
  <img
    alt="dachsund puppy"
    className="thumbnail"
    src="http://www.easypetmd.com/sites/default/files/Miniature%20Dachshund%20Smooth%20haired%20(1).jpg" />
</div>
`;

exports[`App tests verifies App render 1`] = `
<div>
  <div>
    <button
      onClick={[Function]}>
      List View
    </button>
    <button
      onClick={[Function]}>
      Thumbnail View
    </button>
    <button
      onClick={[Function]}>
      Gallery View
    </button>
  </div>
  <div>
    <ListView />
  </div>
</div>
`;
